--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.0.1
+Flask==1.1.2
 Flask-Sockets==0.2.1
 gunicorn==20.0.4
 redis==3.5.3
 jinja2==3.0.3
 itsdangerous==2.0.1
+Werkzeug==1.0.1
